syntax = "proto3";

package scraper;

option go_package = "./proto";

service DataProcessor {
  rpc StreamProducts (stream ProductRequest) returns (SummaryResponse);
  rpc MatchReceiptItem (MatchRequest) returns (MatchResponse);
}

message ProductRequest {
  string name = 1;
  float price = 2;
  string image = 3;
}

message SummaryResponse {
  string message = 1;
  int32 count = 2;
  bool success = 3;
}

message MatchRequest {
  string name = 1;
  float price = 2;
  int32 quantity = 3;
}

message MatchResponse {
  string matched_name = 1;
  float official_price = 2;
  float confidence = 3;
  bool found = 4;
}